...
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailText"
            android:hint="Email"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="8dp"
...

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:hint="Password" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="login"
            android:id="@+id/loginButton"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorMainFont"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:padding="12dp" />

...
