...
                </LinearLayout>



                <Button

    android:id="@+id/btn_save"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginLeft="64dp"
    android:layout_marginRight="64dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
...
